--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <input type="text">
-    <button>Check</button>
-    <div class="showText">
-        <h2></h2>
-    </div>
+    <header>
+        <button class="again">
+            Again!
+        </button>
+        <p>Between 1 to 20</p>
+    </header>
+    <main>
+        <h1>Guess My Number!</h1>
+        <div class="guessShowArea">
+            <div class="line"></div>
+            <div class="box">
+                <p>?</p>
+            </div>
+
+        </div>
+        <div class="userArea">
+            <div class="guessArea">
+                <input type="text" maxlength="2" size="2">
+                <button class="check">Check!</button>
+                <p class="turns">Remaining Turns :5</p>
+
+            </div>
+            <div class="scoreArea">
+                <p class="guessing">Start guessing....</p>
+                <div class="scores">
+                    <p class="score">Score :5</p>
+                    <p class="highScore">High Score :5</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="app.js"></script>
 </body>
+
 </html>
