--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
     <header>
         <button class="again">
-            Again!
+            New Game!
         </button>
         <p>Between 1 to 20</p>
     </header>
     <main>
         <h1>Guess My Number!</h1>
+        <h3 id="rounds">Round 1</h3>
         <div class="guessShowArea">
             <div class="line"></div>
             <div class="box">
@@ -28,14 +29,14 @@
             <div class="guessArea">
                 <input type="text" maxlength="2" size="2">
                 <button class="check">Check!</button>
-                <p class="turns">Remaining Turns :5</p>
+                <p class="turns">Remaining Turns :10</p>
 
             </div>
             <div class="scoreArea">
                 <p class="guessing">Start guessing....</p>
                 <div class="scores">
-                    <p class="score">Score :5</p>
-                    <p class="highScore">High Score :5</p>
+                    <p class="score">Score :0</p>
+                    <p class="totalScore">Total Score :0</p>
                 </div>
             </div>
         </div>
