--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
                 </div>
             </div>
         </div>
+        
     </main>
+    <div class="modal" id="winModal">
+        <div class="winModal">
+<h3>You Win This Round</h3>
+<hr>
+<div class="winScore">
+    <h4>Score</h4>
+    <h4>Total Score</h4>
+</div>
+<hr>
+<div class="btns">
+    <button id="modalNewGame">New Game</button>
+    <button id="modalNextRound">Next Round</button>
+</div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
