--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guess My Number</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -28,6 +29,7 @@
         <div class="userArea">
             <div class="guessArea">
                 <input type="text" maxlength="2" size="2">
+                <p class="notNum" style="font-family: 'Poppins',sans-serif; text-align: center; font-size: .8rem; color: rgb(255, 50, 50); margin: 0; display: none;">Only Numbers allowed</p>
                 <button class="check">Check!</button>
                 <p class="turns">Remaining Turns :10</p>
 
